squash hardware cost bugs

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,6 @@ body {
 .selector-row {
   display: flex;
 }
+label {
+  margin-right: 1em;
+}
